<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_19dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/crown_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:src="@drawable/ic_crown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12dp"
            android:layout_marginTop="@dimen/_29dp"
            android:layout_marginEnd="@dimen/_12dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/image"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toStartOf="@+id/crown_btn"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/share_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_detail_btn_bg"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/share_img"/>

        <ImageView
            android:id="@+id/share_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_8dp"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="@+id/share_view"
            app:layout_constraintStart_toStartOf="@id/share_view"
            app:layout_constraintBottom_toTopOf="@id/share_txt"/>

        <TextView
            android:id="@+id/share_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/share"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_14sp"
            android:layout_margin="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="@id/share_view"
            app:layout_constraintStart_toStartOf="@id/share_view"
            app:layout_constraintBottom_toBottomOf="@id/share_view"
            />

        <View
            android:id="@+id/save_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_detail_btn_bg"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/share_view"
            app:layout_constraintTop_toTopOf="@id/save_img"/>

        <ImageView
            android:id="@+id/save_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_8dp"
            android:src="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="@+id/save_view"
            app:layout_constraintStart_toStartOf="@id/save_view"
            app:layout_constraintBottom_toTopOf="@id/save_txt"/>

        <TextView
            android:id="@+id/save_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/save"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_14sp"
            android:layout_margin="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="@id/save_view"
            app:layout_constraintStart_toStartOf="@id/save_view"
            app:layout_constraintBottom_toBottomOf="@id/save_view"
            />

        <View
            android:id="@+id/delete_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_detail_btn_bg"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_view"
            app:layout_constraintTop_toTopOf="@id/delete_img"/>

        <ImageView
            android:id="@+id/delete_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_8dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="@+id/delete_view"
            app:layout_constraintStart_toStartOf="@id/delete_view"
            app:layout_constraintBottom_toTopOf="@id/delete_txt"/>

        <TextView
            android:id="@+id/delete_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/delete"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_14sp"
            android:layout_margin="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="@id/delete_view"
            app:layout_constraintStart_toStartOf="@id/delete_view"
            app:layout_constraintBottom_toBottomOf="@id/delete_view"
            />


        <androidx.cardview.widget.CardView
            android:id="@+id/detail_img_card"
            app:cardCornerRadius="@dimen/_12dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:layout_marginBottom="@dimen/_35dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/title_txt"
            app:layout_constraintBottom_toTopOf="@id/save_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >

            <ImageView
                android:id="@+id/detail_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
